--- a/public/index.html
+++ b/public/index.html
@@ -228,10 +228,10 @@ body{font-family:'Instrument Sans',-apple-system,sans-serif;background:var(--g50
 /* ---- CONFIG ---- */
 var MPC_ONPREM="https://maps.nashville.gov/arcgis/rest/services/Planning/DevTracker_Cases/FeatureServer/1/query";
 var MPC_ONLINE="https://services2.arcgis.com/HdTo6HJqh92wn4D8/arcgis/rest/services/Development_Tracker_Cases_view/FeatureServer/1/query";
-var BP_URL="https://maps.nashville.gov/arcgis/rest/services/Codes/BuildingPermits/MapServer/0/query";
+var BP_URL="https://services2.arcgis.com/HdTo6HJqh92wn4D8/ArcGIS/rest/services/Building_Permits_Issued_2/FeatureServer/0/query";
 var MPC_FN="/.netlify/functions/nashville-data?source=mpc", BP_FN="/.netlify/functions/nashville-data?source=bp", PAGE=2000;
 var PARCEL_TILES="https://maps.nashville.gov/arcgis/rest/services/Cadastral/Parcels/MapServer/tile/{z}/{y}/{x}";
-var ASSESSOR_URL="https://www.padctn.org/prc/property-detail?mapGroup=";
+var ASSESSOR_URL="https://www.padctn.org";
 
 /* ---- STATUS MAP ---- */
 var ST={New:{l:"New",c:"#16a34a"},Pending:{l:"Pending",c:"#d97706"},Active:{l:"Active",c:"#7c3aed"},Complete:{l:"Complete",c:"#64748b"},Approved:{l:"Approved",c:"#16a34a"},Cancelled:{l:"Cancelled",c:"#dc2626"},Expired:{l:"Expired",c:"#9ca3af"},Issued:{l:"Issued",c:"#2563eb"},Closed:{l:"Closed",c:"#64748b"},Withdrawn:{l:"Withdrawn",c:"#9ca3af"},Deferred:{l:"Deferred",c:"#f59e0b"}};
@@ -293,24 +293,33 @@ function parseBP(json){
   if(!json.features)return[];
   return json.features.filter(function(f){return f.geometry&&f.geometry.x!=null;}).map(function(f,i){
     var a=f.attributes||{};
-    var aDt=a.DATE_ACCEPTED?new Date(a.DATE_ACCEPTED):null;
-    var iDt=a.DATE_ISSUED?new Date(a.DATE_ISSUED):null;
-    var fDt=a.FINALDATE?new Date(a.FINALDATE):null;
-    var dp=aDt||iDt;
-    var status=a.STATUS_CODE||"";
-    var ns=status;
-    if(status){var sl=status.toUpperCase();if(sl==="DONE"||sl==="CLOSED")ns="Closed";else if(sl==="ISSUED"||sl==="ISS")ns="Issued";else if(sl==="ACTIVE"||sl==="REVIEW"||sl==="OPEN")ns="Active";else if(sl==="PEND"||sl==="PENDING")ns="Pending";else if(sl==="CANCEL"||sl==="CANCELLED"||sl==="VOID")ns="Cancelled";else if(sl==="EXPIRED"||sl==="EXP")ns="Expired";else if(sl==="APPROVED"||sl==="APPR")ns="Approved";}
-    var tp=a.CASE_TYPE_DESC||"";
-    var sub=a.SUB_TYPE_DESC||"";
-    return{id:"bp-"+(a.OID||i),src:"bp",cs:a.CASE_NUMBER||"",
-      nm:sub||tp||a.CASE_NUMBER||"Building Permit",
-      tp:tp,sub:sub,per:tp,st:ns||"Active",
-      addr:a.LOCATION||"",bill:"",
-      mpcDt:null,acceptDt:aDt,datePrimary:dp,ds:dp?dp.toISOString().slice(0,10):"",ts:dp?dp.getTime():0,
-      lat:f.geometry.y,lng:f.geometry.x,act:a.FINALCODE||"",vote:"",
-      app:"",rep:"",cd:"",lead:"",
-      cap:a.SCOPE||"",ez:"",nz:"",acres:"",policy:"",cplan:"",parcels:a.APN||"",hearing:"",
-      cost:a.CONSTVAL||"",issDt:iDt,finalDt:fDt,sqft:a.BLDG_SQ_FT||"",units:a.UNITS||"",mapGroup:""};
+    var eDt=a.Date_Entered?new Date(a.Date_Entered):null;
+    var iDt=a.Date_Issued?new Date(a.Date_Issued):null;
+    var dp=iDt||eDt;
+    var tp=a.Permit_Type_Description||"";
+    var sub=a.Permit_Subtype_Description||"";
+    // Normalize status: all permits in this dataset are "Issued"
+    var st="Issued";
+    // Convert geometry from Web Mercator to lat/lng if needed
+    var lat,lng;
+    if(f.geometry.spatialReference&&f.geometry.spatialReference.wkid===4326){lat=f.geometry.y;lng=f.geometry.x;}
+    else{
+      // Web Mercator to WGS84
+      var x=f.geometry.x,y=f.geometry.y;
+      lng=(x/20037508.34)*180;
+      lat=(y/20037508.34)*180;
+      lat=180/Math.PI*(2*Math.atan(Math.exp(lat*Math.PI/180))-Math.PI/2);
+    }
+    return{id:"bp-"+(a.ObjectId||i),src:"bp",cs:a.Permit__||"",
+      nm:sub||tp||a.Permit__||"Building Permit",
+      tp:tp,sub:sub,per:a.Per_Ty||"",st:st,
+      addr:a.Address||"",bill:"",
+      mpcDt:null,acceptDt:eDt,datePrimary:dp,ds:dp?dp.toISOString().slice(0,10):"",ts:dp?dp.getTime():0,
+      lat:lat,lng:lng,act:"",vote:"",
+      app:a.Contact||"",rep:"",cd:a.Council_Dist?"District "+a.Council_Dist:"",lead:"",
+      cap:a.Purpose||"",ez:"",nz:"",acres:"",policy:"",cplan:"",parcels:a.Parcel||"",hearing:"",
+      cost:a.Const_Cost||"",issDt:iDt,finalDt:null,sqft:"",units:"",
+      city:a.City||"",zip:a.ZIP||"",mapGroup:a.Parcel||""};
   });
 }
 
@@ -445,7 +454,7 @@ function selP(p){
     if(p.per)h+=rw("Permit Type",p.per);if(p.act)h+=rw("MPC Action",p.act);if(p.vote)h+=rw("MPC Vote",p.vote);
     if(p.bill)h+=rw("Ordinance #",p.bill,1);if(p.ez)h+=rw("Existing Zoning",p.ez,1);if(p.nz)h+=rw("Proposed Zoning",p.nz,1);if(p.acres)h+=rw("Acreage",p.acres);
   }
-  if(p.src==="bp"){if(p.issDt)h+=rw("Date Issued",p.issDt.toISOString().slice(0,10));if(p.finalDt)h+=rw("Final Date",p.finalDt.toISOString().slice(0,10));if(p.cost)h+=rw("Construction Value","$"+Number(p.cost).toLocaleString());if(p.sqft)h+=rw("Building Sq Ft",Number(p.sqft).toLocaleString());if(p.units)h+=rw("Units",p.units);if(p.parcels)h+=rw("Parcel ID",p.parcels,1);}
+  if(p.src==="bp"){if(p.issDt)h+=rw("Date Issued",p.issDt.toISOString().slice(0,10));if(p.acceptDt)h+=rw("Date Entered",p.acceptDt.toISOString().slice(0,10));if(p.cost)h+=rw("Construction Cost","$"+Number(p.cost).toLocaleString());if(p.city)h+=rw("City",p.city);if(p.zip)h+=rw("Zip Code",p.zip);if(p.parcels)h+=rw("Parcel ID",p.parcels,1);if(p.app)h+=rw("Contractor",p.app);if(p.cd)h+=rw("Council District",p.cd);}
   if(p.app)h+=rw(p.src==="bp"?"Contractor":"Applicant",p.app);if(p.rep)h+=rw("Representative",p.rep);
   if(p.cd)h+=rw("Council District",p.cd);if(p.lead)h+=rw("Staff Lead",p.lead);
   if(p.cplan)h+=rw("Community Plan",p.cplan);if(p.policy)h+=rw("Policy",p.policy);if(p.parcels)h+=rw("Parcels",p.parcels,1);
@@ -499,9 +508,9 @@ async function loadMPC(){
 }
 async function loadBP(){
   $("lm").textContent="Loading building permits...";$("ls").textContent="Fetching permit data...";
-  // 1. Try on-premise server directly from browser
-  try{$("ls").textContent="Loading permits (direct)...";var j=await fetchPaginated(BP_URL,function(n){$("ls").textContent=n+" permit records...";$("pf").style.width=50+Math.min(n/80000*50,50)+"%";},"OID");bpData=parseBP(j);if(bpData.length>0){$("ds-bp-cnt").textContent=bpData.length;return true;}}catch(e){}
-  // 2. Try Netlify function (server-side proxy)
+  // ArcGIS Online endpoint - CORS enabled, fetch directly from browser
+  try{$("ls").textContent="Loading permits...";var j=await fetchPaginated(BP_URL,function(n){$("ls").textContent=n+" permit records...";$("pf").style.width=50+Math.min(n/80000*50,50)+"%";},"ObjectId");bpData=parseBP(j);if(bpData.length>0){$("ds-bp-cnt").textContent=bpData.length;return true;}}catch(e){}
+  // Fallback: Netlify function
   try{$("ls").textContent="Loading permits via proxy...";var r=await fetch(BP_FN);var j2=await r.json();if(j2.features&&j2.features.length>0){bpData=parseBP(j2);$("ds-bp-cnt").textContent=bpData.length;return true;}}catch(e2){}
   return false;
 }
